--- a/config.org
+++ b/config.org
@@ -164,7 +164,8 @@
             +lsp)               ; I hereby declare "nix geht mehr!"
        ;;ocaml             ; an objective camel
        (org +noter
-            +pretty)               ; organize your plain life in plain text
+            +pretty
+            +pomodoro)               ; organize your plain life in plain text
        ;;php               ; perl's insecure younger brother
        ;;plantuml          ; diagrams for confusing people more
        ;;graphviz          ; diagrams for confusing yourself even more
