Replaced KILL with CNCL org-todo

--- a/config.org
+++ b/config.org
@@ -1285,7 +1285,7 @@ Largely identical to doom's default but I want to replace KILL with CNCL
            "IDEA(i)"  ; An unconfirmed and unapproved task or notion
            "|"
            "DONE(d)"  ; Task successfully completed
-           "KILL(k)") ; Task was cancelled, aborted, or is no longer applicable
+           "CNCL(c)") ; Task was cancelled, aborted, or is no longer applicable
           (sequence
            "[ ](T)"   ; A task that needs doing
            "[-](S)"   ; Task is in progress
